2001-03-28  Peter Stephenson  <pws@csr.com>

	* unposted: Doc/Zsh/zle.yo, Doc/Zsh/mod_zle.yo: move ZLE builtin
	documentation from mod_zle.yo to zle.yo.

2001-03-28  Sven Wischnowsky  <wischnow@zsh.org>

	* Completion/Commands/_history_complete_word,
	13815: Doc/Zsh/compsys.yo: more cleanup; simplify the stop
	and liststyles; try to make it obey whatever _main_complete
	says should be done (menu-wise)

	* 13814: Completion/User/_urls, Doc/Zsh/compsys.yo: replace
	`path' with more general `urls' style

	* 13813: Completion/Core/_multi_parts: make sure _multi_parts
	doesn't add the empty string as a possible completion

2001-03-28  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Commands/_complete_tag: mysterious extra
	blank line somehow crept in at critical point.

2001-03-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 13809: Completion/Base/_arguments: don't add options as
	completions if a `->state' action was used and we are
	directly after the option (in the same word)

2001-03-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 13790: Completion/Base/_arguments, Completion/X/_x_arguments,
	Completion/X/_xt_arguments, Doc/Zsh/compsys.yo: make
	_arguments return 300 only if given the -R option

	* 13789: Completion/Base/_tilde, Completion/Builtins/_popd:
	comment out looking up the prefix-needed style when
	completing directory stack entries; make _tilde use _popd,
	finally

	* 3752: Completion/Commands/_history_complete_word,
	Src/Zle/compresult.c: try to make _h_c_w smarter at the
	beginning and end of the list; avoid list-beeping if the old
	completion list is re-used

2001-03-26  Clint Adams  <schizo@debian.org>

	* 13783 from Michal Politowski: Completion/Builtins/_pids:
	handle pids that don't have a preceding space in ps output.

	* 13779 from Michal Politowski: Completion/Commands/_complete_tag:
	typo fixes?

	* 13777: Src/Builtins/rlimits.awk: add maxfilelocks
	for glibc 2.2.

2001-03-26  Sven Wischnowsky  <wischnow@zsh.org>
